# ReconZZer

./: .env.example  .gitignore  COMPLETION_SUMMARY.md  CONTRIBUTING.md  FLOWCHART.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  MACOS_SETUP.md  QUICKSTART.md  README.md  README_UPDATES.md  REQUIREMENTS_FIX.md  SECURITY.md  START.md  START_HERE.md  TEST_READY.md  VERIFICATION_CHECKLIST.md  WEB_README.md  app.py  check_deps.py  cyber_kill_chain_recon.md  pyproject.toml  recon_script.py  recon_tools_methods.md  requirements.txt  run.sh  setup.sh  test.py  validate.py
osint_data/: OSINT.txt
static/css/: style.css
static/js/: script.js
templates/: base.html  dashboard.html  error.html  install.html
