[project]
name = "ReconZZer"
version = "1.0.0"
description = "Framework de automação para Reconhecimento no Cyber Kill Chain"
authors = [{name = "pr0t0n"}]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "theHarvester>=4.0.0",
]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"
